tests/sqllogic/any/pg/simple/ctas.test
hash-threshold 100

statement count 10000
CREATE TABLE vedernikoff AS
SELECT
  iq,
  CONCAT('salary ', salary::text, '$') AS salary,
  'i do nothing and gain money' AS description
FROM
  generate_series(1, 100) AS clickclack(iq),
  generate_series(1, 100) AS serenedb(salary);


query rowsort
SELECT * FROM vedernikoff ORDER BY 1, 2, 3;
----
30003 values hashing to 0559962e298db3135b36ee24b4a3d1c0


statement error
CREATE TABLE vedernikoff AS SELECT 1 AS id;
----
db error: ERROR: relation "vedernikoff" already exists


statement ok
CREATE TABLE IF NOT EXISTS vedernikoff AS SELECT 1 AS id;


query rowsort
SELECT * FROM vedernikoff ORDER BY 1, 2, 3;
----
30003 values hashing to 0559962e298db3135b36ee24b4a3d1c0


statement error
CREATE TABLE vedernikoff (id INTEGER PRIMARY KEY);
----
db error: ERROR: relation "vedernikoff" already exists


statement error
CREATE TABLE lmao(iq, lmao) AS SELECT 1;


skipif serenedb # TODO(Pasha) better column names
statement error
CREATE TABLE lmao AS SELECT 1 AS x, 2 AS x;
----
db error: ERROR: column "x" specified more than once


statement ok
DROP TABLE vedernikoff;


query error
SELECT * FROM vedernikoff;


onlyif serenedb
statement error
CREATE TABLE vedernikoff AS
SELECT
  CASE WHEN iq > 500 THEN iq
  ELSE error('im gonna fail dis sheet(i mean a peace of paper)')
  END as rakamakaka
FROM
  generate_series(1, 10000) AS clickclack(iq);
----
db error: ERROR: im gonna fail dis sheet(i mean a peace of paper)


query error
SELECT 'vedernikoff'::regclass;
----
db error: ERROR: relation "vedernikoff" does not exist


statement count 10000
CREATE TABLE vedernikoff AS
SELECT
  iq,
  CONCAT('salary ', salary::text, '$') AS salary,
  'i do nothing and gain money' AS description
FROM
  generate_series(1, 100) AS clickclack(iq),
  generate_series(1, 100) AS serenedb(salary);


statement ok
DROP TABLE vedernikoff;


# SELECT INTO tests

statement count 10000
SELECT
  iq,
  CONCAT('salary ', salary::text, '$') AS salary,
  'i do nothing and gain money' AS description
INTO vedernikoff
FROM
  generate_series(1, 100) AS clickclack(iq),
  generate_series(1, 100) AS serenedb(salary);


query rowsort
SELECT * FROM vedernikoff ORDER BY 1, 2, 3;
----
30003 values hashing to 0559962e298db3135b36ee24b4a3d1c0


statement error
SELECT 1 AS id INTO vedernikoff;
----
db error: ERROR: relation "vedernikoff" already exists


statement error
CREATE TABLE vedernikoff (id INTEGER PRIMARY KEY);
----
db error: ERROR: relation "vedernikoff" already exists


skipif serenedb # TODO(Pasha) better column names
statement error
SELECT 1 AS x, 2 AS x INTO lmao;
----
db error: ERROR: column "x" specified more than once


skipif serenedb # TODO(Pasha) Fix ctas + select into
statement error
CREATE TABLE lmao AS SELECT * INTO lmao FROM vedernikoff;
----
db error: ERROR: SELECT ... INTO is not allowed here


statement ok
DROP TABLE vedernikoff;


query error
SELECT 'vedernikoff'::regclass;
----
db error: ERROR: relation "vedernikoff" does not exist


skipif serenedb # TODO(Pasha) Add fail function?
skipif postgres # TODO(Pasha) Fix?
statement error
SELECT
  CASE WHEN iq > 500 THEN iq
  ELSE fail('im gonna fail dis sheet(i mean a peace of paper)')
  END as rakamakaka
INTO vedernikoff
FROM
  generate_series(1, 10000) AS clickclack(iq);
----
db error: ERROR: im gonna fail dis sheet(i mean a peace of paper)


query error
SELECT * FROM vedernikoff;


statement count 10000
SELECT
  iq,
  CONCAT('salary ', salary::text, '$') AS salary,
  'i do nothing and gain money' AS description
INTO vedernikoff
FROM
  generate_series(1, 100) AS clickclack(iq),
  generate_series(1, 100) AS serenedb(salary);


statement ok
DROP TABLE vedernikoff;

onlyif serenedb
query
EXPLAIN CREATE TABLE vedernikoff AS SELECT x FROM generate_series(1, 10) AS t(x);
----
QUERY PLAN
┌───────────────────────────┐
│         EXTENSION         │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      GENERATE_SERIES      │
│    ────────────────────   │
│         Function:         │
│      GENERATE_SERIES      │
│                           │
│          ~10 rows         │
└───────────────────────────┘


onlyif serenedb
query error
SELECT 'vedernikoff'::regclass;
----
db error: ERROR: relation "vedernikoff" does not exist


onlyif serenedb
connection my_very_unique_name_for_ctas
query
EXPLAIN ANALYZE CREATE TABLE vedernikoff AS SELECT x FROM generate_series(1, 10) AS t(x);
----
QUERY PLAN
┌─────────────────────────────────────┐
│┌───────────────────────────────────┐│
││    Query Profiling Information    ││
│└───────────────────────────────────┘│
└─────────────────────────────────────┘
EXPLAIN ANALYZE CREATE TABLE vedernikoff AS SELECT x FROM generate_series(1, 10) AS t(x);
┌────────────────────────────────────────────────┐
│┌──────────────────────────────────────────────┐│
<slt:ignore>
│└──────────────────────────────────────────────┘│
└────────────────────────────────────────────────┘
┌───────────────────────────┐
│           QUERY           │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│      EXPLAIN_ANALYZE      │
│    ────────────────────   │
│                           │
│           0 rows          │
<slt:ignore>
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         EXTENSION         │
│    ────────────────────   │
│                           │
│           1 row           │
<slt:ignore>
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         TABLE_SCAN        │
│    ────────────────────   │
│         Function:         │
│      GENERATE_SERIES      │
│                           │
│                           │
│                           │
│          10 rows          │
<slt:ignore>
└───────────────────────────┘


onlyif serenedb
query
SELECT count(*) FROM vedernikoff;
----
count
10


onlyif serenedb
statement ok
DROP TABLE vedernikoff;
